--- a/src/globalStyles/scss/variables.scss
+++ b/src/globalStyles/scss/variables.scss
@@ -97,3 +97,8 @@ $modal-min-height: 455px;
   mediumScreen: $medium-screen;
   smallScreen: $small-screen;
 }
+
+$box-shadow: rgba(0, 0, 0, 0.1);
+$box-shadow-darker: rgba(0, 0, 0, 0.16);
+$red-dark-header: #d62027;
+$red-light-header: #f2474e;
