update style for checkout create job ad

--- a/src/globalStyles/scss/variables.scss
+++ b/src/globalStyles/scss/variables.scss
@@ -2,7 +2,7 @@
 $base-font-color: #323232;
 $black: #000;
 $blue-dark: #190c4e;
-$blue: #21125e;
+$blue: #0a87f5;
 $gray-dark: #7d7d7d;
 $gray-light: #f6f6f6;
 $gray: #c4c4c4;
@@ -18,8 +18,8 @@ $autofillColorSelected: rgb(232, 240, 254);
 $darkGreen: #06847b;
 
 // typography
-$base-font-family: "Inter", sans-serif;
-$base-font-size: 1rem; // 16px
+$base-font-family: Roboto, sans-serif;
+$base-font-size: 14px / 22px; // 16px
 $small-font-size: 0.875rem; // 14px
 $base-line-height: 1.25rem; // 20px
 $h1-font-size: 4rem; // 64px
