--- a/src/globalStyles/scss/index.scss
+++ b/src/globalStyles/scss/index.scss
@@ -9,6 +9,7 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   color: $base-font-color;
+  background-color: #f5f5f5;
   overflow-x: hidden;
   margin-right: calc(-1 * (100vw - 100%));
 
