apply checkout step container style

--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -15,7 +15,7 @@
   box-shadow: 0 2px 4px 0 $box-shadow;
   display: flex;
   flex-direction: row;
-  height: 3.55rem;
+  height: 66px;
   position: relative;
 
   &__left {
@@ -43,6 +43,7 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
+      height: 100%;
     }
   }
 
@@ -198,7 +199,7 @@
     color: rgba(255, 255, 255, 0.65);
 
     @media (min-width: $medium-screen) {
-      border-left: 1px solid $gray-light;
+      // border-left: 1px solid $gray-light;
     }
 
     svg * {
