--- a/src/views/Vacancies/scss/vacancy_list_item.scss
+++ b/src/views/Vacancies/scss/vacancy_list_item.scss
@@ -25,14 +25,10 @@
       display: flex;
       align-items: center;
 
-      & > div {
-        display: inline-flex;
+      svg {
+        width: 1.25rem;
+        height: 1.25rem;
         margin-right: 0.5rem;
-      }
-
-      & > div, svg {
-        width: 1rem;
-        height: 1rem;
       }
 
       &:not(:first-child) {
@@ -42,13 +38,5 @@
   }
 
   .card-body-actions {
-    button {
-      padding: 0.5rem 0.75rem;
-
-      span {
-        text-transform: unset;
-        font-size: 14px;
-      }
-    }
   }
 }
